# checksy

./: .gitignore  .goreleaser.yaml  ARCHITECTURE.md  CODEMAP.md  CONVENTIONS.md  DESIGN_DECISIONS.md  PROMPT.md  PULL_AGENT_CONTRACT.md  README.md  THREAT_MODEL.md  justfile  release-procedure.md  release.sh  skills-lock.json  test.sh  todo.md
.devcontainer/: Dockerfile  aliases.sh  aliases.yaml  checksy.yaml  devcontainer.json  tool-versions.env  versions.yaml
.devcontainer/scripts/: check-devcontainer-cli.sh  check-just.sh  install-devcontainer-cli.sh  install-entr.sh  install-just.sh  install-prerequisites.sh  provision-lib.sh  test-provisioning-helpers.sh
.github/workflows/: ci.yml  release.yml
fixtures/default-severity/: .checksy.yaml
fixtures/fix-behavior/: .checksy.yaml  failing-check.sh  fix-failure.sh  fix-success.sh
fixtures/happy-path/: .checksy.yaml  .workspace-doctor.config.yaml  bad.sh  fail.sh  good.sh  pass.sh
fixtures/hint-test/: .checksy.yaml
fixtures/interactive-fix/: README.md  cases.yaml  failed-repair-below-threshold.yaml  failed-repair-continues.yaml  foreground-loss.yaml  interactive-parent-interrupt.yaml  interactive-success.yaml  interactive-suspension.yaml  interactive-timeout-fail-fast.yaml  no-extra-pty-descriptors.yaml  ordinary-fix-non-interactive.yaml  passing-no-terminal.yaml  precondition-interactive.yaml  terminal-resize.yaml  terminal-restoration.yaml  unavailable-interactive.yaml
keys/: signing-key.asc
scripts/: cross-compile.sh  install.sh  release.sh  uninstall.sh  verify-static-linux-binary.sh
src/: Cargo.toml  Cross.toml  cache.rs  check.rs  cli.rs  config.rs  doctor.rs  git.rs  go.mod  go.sum  lib.rs  main.rs  process_runner.rs  provision_lock.rs  resolved.rs  schema.rs  state_lock.rs  version.rs
src/cmd/checksy/: main.go  main_test.go
src/cmd/workspace-doctor/: main.go
src/internal/cli/: root.go  root_test.go  schema_command.go  schema_command_test.go
src/internal/config/: config.go  config_test.go
src/internal/doctor/: doctor.go  doctor_test.go
src/internal/version/: version_test.go
src/schema/: config.go  config_test.go
src/state/: identity.rs  integrity.rs  mod.rs  model.rs  store.rs  store_tests.rs
src/tests/: interactive_fix_contract.rs  local_origin_contract.rs  p0_acceptance.rs  process_runner_contract.rs  provisioning_contract.rs  provisioning_lock_contract.rs  skip_if_contract.rs  strict_configuration.rs
src/tests/support/: mod.rs
(+417 files in other folders)
