[package]
name = "checksy"
version = "0.5.2"
edition = "2021"
description = "Inspect and troubleshoot development environments"
repository = "https://github.com/notwillk/checksy"
license = "MIT"

[dependencies]
serde = { version = "=1.0.229", features = ["derive"] }
serde_json = "=1.0.151"
serde_yaml = "=0.9.11"
glob = "=0.3.0"
schemars = "=1.2.1"

[target.'cfg(any(target_os = "linux", target_os = "macos"))'.dependencies]
rustix = { version = "=0.37.28", default-features = false, features = ["fs", "process", "std"] }

[dev-dependencies]
jsonschema = { version = "=0.48.2", default-features = false }
tempfile = "=3.5.0"

[profile.release]
lto = true
codegen-units = 1
strip = true
opt-level = "z"

[[bin]]
name = "checksy"
path = "main.rs"

[lib]
name = "checksy"
path = "lib.rs"
